k8s/ndb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ndb-deployment
  labels:
    app: ndb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ndb-postgres
  template:
    metadata:
      labels:
        app: ndb-postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ndb-service
spec:
  # type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    # nodePort: 30001
  selector:
    app: ndb-postgres
