k8s/ndb-rest-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phoenix-api-deployment
  labels:
    app: ndb-rest-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ndb-rest-api
  template:
    metadata:
      labels:
        app: ndb-rest-api
    spec:
      containers:
      - name: ndb-rest-api
        image: visco01/ndb-rest-api:main
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: ndb-rest-api-service
spec:
  type: LoadBalancer
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30002
  selector:
    app: ndb-rest-api
