k8s/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ndb-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ndb-rest-api-service
                port:
                  number: 4000
